log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:38:54 PM UTC: 
 tests:  0|6
total_score: 0/70
8a0f249
Thu 30 Mar 2023 03:47:14 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:46: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |                            ~                 ^
      |                                              )
arraylist.c:18:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   18 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:36:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   36 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1c8b7d
Thu 30 Mar 2023 03:48:26 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:46: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |                            ~                 ^
      |                                              )
arraylist.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:37:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   37 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d50e85
Thu 30 Mar 2023 03:49:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:59: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(ArrayList);
      |                                         ~                 ^
      |                                                           )
arraylist.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:37:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   37 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df7c0c5
